# deepee

./: .gitignore  404.html  CI_env.yml  CNAME  MacBook16.txt  README.md  environment.yml  example.py  index.html  mkdocs.yml  noisebox.py  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
classification_benchmarks/: profile_opacus.py  profile_pyvacy.py
deepee/: __init__.py  accountant.py  dataloader.py  dp_wrapper.py  mixins.py  privacy_accounting.py  snooper.py  surgery.py  watchdog.py  wrapper.py
docs/: examples.md  index.md
examples/: .gitignore  DPCIFAR_example.ipynb  LiverSegmentation.py  PneumoniaClassification.py  PyTorchLightningAutoencoder.py  PyTorchLightningClassification.py  PyTorchLightningSegmentation.py  README.md  ablations.py  benchmarks.py  dataloader.py  environment.yml  environment_examples.yml
paper_results/: DP_classification.pt  DP_classification_higher_epsilon.pt  DP_segmentation.pt  vanilla_results.pt  vanilla_segmentation.pt
results/: PneumoniaClassification.py  benchmarks.py  dataloader.py
results/classification_benchmarks_memory/: profile_deepee.py
results/segmentation_benchmarks_memory/: profile_pyvacy.py
results/unsupported_layer_benchmarks_memory/: profile_deepee.py  profile_opacus.py  profile_pyvacy.py  unet.py
search/: search_index.json
segmentation_benchmarks/: profile_deepee.py  profile_opacus.py  profile_pyvacy.py
site/examples/: index.html
tests/: test_accountant.py  test_dataloader.py  test_deepee.py  test_dp_wrapper.py  test_per_sample_wrapper.py  test_privacy_accounting.py  test_privacy_wrapper.py  test_snooper.py  test_surgeon.py  test_watchdog.py  test_wrapper.py
