[tool.poetry]
name = "deepee"
version = "0.1.4"
description = "Fast (and cheeky) differentially private gradient-based optimisation in PyTorch"
authors = ["Georgios Kaissis", "Alexander Ziller"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gkaissis/deepee"


[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.0"
torchvision = "^0.9.0"
black = "^20.8b1"
mypy = "^0.812"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
