[tool.poetry]
name = "deepee"
version = "0.1.7"
description = "Fast (and cheeky) differentially private gradient-based optimisation in PyTorch"
authors = ["Georgios Kaissis", "Alexander Ziller"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gkaissis/deepee"
homepage = "https://github.com/gkaissis/deepee"

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
