[tool.poetry]
name = "deepee"
version = "0.1.8"
description = "Fast (and cheeky) differentially private gradient-based optimisation in PyTorch"
authors = ["Georgios Kaissis", "Alexander Ziller"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gkaissis/deepee"
homepage = "https://github.com/gkaissis/deepee"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
torch = "^1.8.1"
torchvision = "^0.9.1"
scipy = "^1.6.2"
torchcsprng = "^0.2.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mypy = "^0.812"
black = "^20.8b1"
testfixtures = "^6.17.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
